Fix TA info alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -12,32 +12,32 @@
 
 .container {
   width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: -15px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: -15px;
 }
 
 .row{
   display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .colsmall {
   position: relative;
-    width: 100%;
-    min-height: 1px;
-    padding-right: 15px;
-    padding-left: 50px;
-    flex-basis: 0;
-    -webkit-box-flex: 1;
-    -ms-flex-positive: 1;
-    flex-grow: 1;
-    max-width: 100%;
+  width: 100%;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 50px;
+  flex-basis: 0;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  max-width: 100%;
 }
 
 .circle {
@@ -46,7 +46,7 @@
   height: 120px;
   width: 120px;
   line-height: 60px;
-  margin: 50px;
+  margin: 50px 50px 20px 50px;
   -moz-border-radius: 40%;
   border-radius: 50%;
   background-color: #89a8f1;
@@ -56,13 +56,21 @@
 }
 
 .taname{
-  margin-left: -60px;
-  margin-top: -25px;
+  overflow: hidden;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 14px;
+  max-width: 200px;
+  margin: 1em;
+  background: none;
+  vertical-align: middle;
+  position: relative;
+  z-index: 1;
 }
 
 .taname button{
-  margin-left: 100px;
-  margin-top: 40px;
+  margin-left: 25px;
+  margin-top: 5px;
   height: 30px;
   line-height: 0px;
 }
@@ -91,10 +99,9 @@ table {
   border: 2px solid white;
   width: 80%;
   text-align: center;
-  margin-left: 10%;
+  margin-left: 9%;
   padding: 40px;
   margin-top:20px;
-  //padding-bottom: 20px;
 }
 
 tr.tableRow {
@@ -107,8 +114,8 @@ th.cellEntry {
 }
 
 li {
-    padding: 10px;
-    list-style-type : none;
+  padding: 10px;
+  list-style-type : none;
 }
 
 button {
